--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,9 +16,10 @@ h1 {
 
 img {
     float:right;
+    padding: 10px;
     border: solid 1px;
     border-width: 250px;
-    border-color:#FF0000;
+    border: 1px solid rgba(255, 0, 0, .5);
 
     
 }
