--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ img {
     padding: 10px;
     border: solid 1px;
     border-width: 250px;
-    border: 1px solid rgba(255, 0, 0, .5);
+    border: 1px solid rgba(255, 0, .5);
 
     
 }
